--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+
+  "homepage": "https://sirmiiel.github.io/Reward-Summary",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
